Committing the addition of Login_stepDefinitions changed Username and Password in configuration.properties, added plugins to CukesRunner, and changed Library_BasePage and LibraryLoginPage

--- a/libraryAutomation_group9.5/configuration.properties
+++ b/libraryAutomation_group9.5/configuration.properties
@@ -1,4 +1,4 @@
 browser=chrome
 Url=http://library2.cybertekschool.com/login.html
-Username=tester
-Password=test
+Username=student42@library
+Password=zCm83mcJ
