--- a/libraryAutomation_group9.5/pom.xml
+++ b/libraryAutomation_group9.5/pom.xml
@@ -30,6 +30,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
+                    <threadCount>3</threadCount>
+                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <parallel>methods</parallel>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/CukesRunner*.java</include>
